<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CaiusCode</string>
	<string name="help">Help</string>
	<string name="about">About</string>
	<string name="name">Name</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="morse">Morse Code</string>
	<string name="caius">Cesar Code</string>
	<string name="menuMode">Convert mode</string>
	<string name="menuModeShort">Mode</string>
	<string name="encode">Encode</string>
	<string name="decode">Decode</string>
	<string name="send">Send</string>
	<string name="clear">Clear</string>
	<string name="encodeText">Text to encode</string>
	<string name="decodeText">Text to decode</string>
	<string name="codeType">Type of code</string>
	<string name="morseCode">Morse Code</string>
	<string name="emptyString">The text to convert is empty !</string>
	<string name="ok">OK</string>
	<string name="aboutContent">About content</string>
	<string name="binaryCode">Binary Code</string>
	<string name="options">Options</string>
	<string name="show">Show</string>
	<string name="preferencesSaved">Preferenced saved !</string>
	<string name="sendSms">Send by SMS</string>
	<string name="sendMail">Send by mail</string>
	<string name="helpContent">Help</string>
	<string name="prefOutput">Output preferences</string>
</resources>